src/renderer/components/areas/ServerArea.scss
.server-area {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 4px;
  flex: 1 0 auto;
  justify-content: space-around;

  &-fetch {
    display: flex;
    flex-direction: column;
    justify-content: space-around;

    & div {
      display: flex;
      justify-content: center;
      font-size: 18px;
      margin: 10px 0;
    }
  }
}

